implemented controller between bars and beers
